--- a/src/app/styles/foundation.scss
+++ b/src/app/styles/foundation.scss
@@ -57,9 +57,22 @@ body {
   width: 100%;
 }
 
+// .site-main {
+//   min-height: 0;
+//   overflow-y: auto;
+//   -webkit-overflow-scrolling: touch;
+//   padding-block: 24px;
+//   padding-inline: 0;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: flex-start;
+// }
+
 .site-main {
   min-height: 0;
   overflow-y: auto;
+  scrollbar-gutter: stable;
   -webkit-overflow-scrolling: touch;
   padding-block: 24px;
   padding-inline: 0;
